--- a/bio.html
+++ b/bio.html
@@ -3,19 +3,26 @@
 
 <head>
 	<link rel="stylesheet" href="websiterules.css">
+<title>
+John Casey's Biograpy
+</title>
+</head>
 <body>
 
 
 
-<h1>John Casey's Starter Website</h1>
+<h1>John Casey's Biography</h1>
+<div id="bio">
+<h3>Before University</h3>
+<p>I was born in a little city called Grasse in the south of France to a pair of ex-pats. We lived there for a few years before moving back to the states. We moved around a lot when I was young, before settling in Milwaukee, Wi, where I went to middle and high school. I took my first Computer Science courses in high school, learning the very basics of theory and programming. Eventually my years as a kid were done, and I decided to go to Tufts for university.</p>
+<h3>Freshman and Sophomore Years</h3>
+<p>My first two years at school were much like everyone else's. I made friends, learned a lot, and eventually discovered that I really enjoyed computer science, even working my way through the challenge that was Comp 40. At the end of my sophomore year, I decided that I was far enough along in my work that I could take some time to study abroad, and chose the Tufts program in Germany.</p>
+<h3>Junior Year Abroad</h3>
+<p>Germany was a challenge. Not only were all of my classes in German, but most of my social life was as well. I had a bit of trouble adapting, but I made it through through and made a great group of friends I hope to visit again one day.</p>
+<h3>Current Activities</h3>
+<p>I am entering my last year at Tufts, with no small amount of trepidation and excitement. I am teaching a class, researching a history paper, and finalizing my computer science work this semester. I hope I finish with a bang.</p>
 
-<img src="john.png" alt="John Casey" width="367" height="460">
-
-<br>
-<a href="resume.html"> My Resume </a>
-<br>
-<a href="bio.html"> A Short Autobiography </a>
-
+</div>
 
 </body>
 
